# aqcomputron

./: .gitignore  README.md  justfile  pyproject.toml
aqcomputron/: __main__.py  regulator.py
src/aqcomputron/: __init__.py  __main__.py  cfg.py  exc.py  logger.py  regulator.py  sensor.py  sensor_awair.py  term.py  vents.py
tests/: test_regulator.py  test_sensor_awair.py
tests/fixtures/: __init__.py  sensor_test.py  vents.py
