[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aqcomputron"
version = "0.1.0"
description = "A fun little project to regulate air quality."
dependencies = [
	'hacutils @ git+https://github.com/henryotoole/hacutils',
	'requests',
	'fire',
	'structlog',
]
authors = [
	{name = "Josh Reed"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
	'Operating System :: POSIX :: Linux',
	'Programming Language :: Python :: 3',
	'Intended Audience :: Developers'
]

[project.urls]
Repository = "https://github.com/henryotoole/aqcomputron"


[project.optional-dependencies]
test = [
	'pytest'
]